perf(undertow): optimize I/O threads, cache request fields, remove volatile
- UndertowWebEngine: setIoThreads(1) + setWorkerThreads(~2×CPU cores)
  reduces XNIO pool contention at high concurrency
- UndertowHttpContext: cache method() and path() strings per-request,
  remove volatile from cachedBody/responded, optimize headerSet() to
  reuse HttpString.tryFromString(), simplify response output path
- UndertowWebEngine: remove unused import
- ServerHarness: add undertow-adapter engine (Freeway + UndertowWebEngine)
- Benchmark POM: add freeway-http-undertow dependency
- Parent POM: add freeway-benchmark to modules

Fork benchmark (5000req, 16concurrency, 2000warmup, 5runs):
  undertow-adapter: 17.7K→26.1K rps (+47%), p50 393→325us (-17%)